--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,9 @@
-Flask==0.10.1
-Flask-Login==0.2.3
-Flask-Script==0.5.3
-Jinja2==2.7
-MarkupSafe==0.18
-PIL==1.1.7
-PyYAML==3.10
-WTForms==1.0.4
-Werkzeug==0.9.1
-argparse==1.2.1
-blinker==1.2
-distribute==0.6.34
-flask-peewee==0.6.5
-itsdangerous==0.21
-mint==0.5
-peewee==2.1.2
-pyjade==2.0.2
-wsgiref==0.1.2
-wtf-peewee==0.2.2
+click==6.6
+Flask==0.11.1
+Flask-Script==2.0.5
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+pyjade==4.0.0
+six==1.10.0
+Werkzeug==0.11.10
